--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "mime-types": "^2.1.26",
     "next": "9.2.1",
     "next-page-transitions": "^1.0.0-beta.2",
+    "nprogress": "^0.2.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-helmet": "^5.2.1",
