--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-simplemde-editor": "^4.1.0",
     "timeago.js": "^4.0.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "ua-parser-js": "^0.7.21",
     "xml": "^1.0.1"
   },
   "devDependencies": {
