--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "timeago.js": "^4.0.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "ua-parser-js": "^0.7.21",
+    "viewerjs": "^1.5.0",
     "xml": "^1.0.1"
   },
   "devDependencies": {
