--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -15,6 +15,8 @@
     "babel-plugin-import": "^1.13.0",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.19",
+    "echarts": "^4.6.0",
+    "echarts-for-react": "^2.0.15-beta.1",
     "highlight.js": "^9.18.1",
     "marked": "^0.8.0",
     "mime-types": "^2.1.26",
