--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -10,6 +10,8 @@
     "pm2": "pm2 start npm --name admin -- start"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-decoupled-document": "^17.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
     "antd": "^3.26.7",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
@@ -28,7 +30,6 @@
     "react-helmet": "^5.2.1",
     "react-infinite-scroller": "^1.2.4",
     "react-lazyload": "^2.6.5",
-    "react-simplemde-editor": "^4.1.0",
     "timeago.js": "^4.0.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "ua-parser-js": "^0.7.21",
