--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -10,8 +10,7 @@
     "pm2": "pm2 start npm --name admin -- start"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-decoupled-document": "^17.0.0",
-    "@ckeditor/ckeditor5-react": "^2.1.0",
+    "@ckeditor/ckeditor5-react": "2.1.0",
     "antd": "^3.26.7",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
@@ -23,6 +22,7 @@
     "marked": "^0.8.0",
     "mime-types": "^2.1.26",
     "next": "9.2.1",
+    "next-images": "^1.3.1",
     "next-page-transitions": "^1.0.0-beta.2",
     "nprogress": "^0.2.0",
     "react": "16.12.0",
