--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -14,6 +14,8 @@
     "antd": "^3.26.7",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
+    "braft-editor": "^2.3.9",
+    "braft-utils": "^3.0.12",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.19",
     "echarts": "^4.6.0",
