--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
     "antd": "^3.26.7",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
+    "braft-editor": "^2.3.9",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.19",
     "echarts": "^4.6.0",
