--- a/packages/admin/.prettierrc
+++ b/packages/admin/.prettierrc
@@ -1,5 +1,7 @@
 {
   "singleQuote": true,
   "semi": true,
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "bracketSpacing": true
 }
