--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "braft-editor": "^2.3.9",
+    "braft-extensions": "^0.1.0",
     "braft-utils": "^3.0.12",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.19",
