--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,18 @@
 {
-  "extends": ["prettier"],
   "parser": "babel-eslint",
+  "extends": ["prettier"],
+  "plugins": ["prettier", "react", "react-hooks"],
   "env": {
     "browser": true,
     "node": true,
     "es6": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "rules": {
     "default-param-last": "off",
@@ -18,6 +26,5 @@
       }
     ],
     "prettier/prettier": "error"
-  },
-  "plugins": ["prettier"]
+  }
 }
