--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -10,12 +10,10 @@
     "pm2": "pm2 start npm --name admin -- start"
   },
   "dependencies": {
+    "@toast-ui/react-editor": "^2.1.0",
     "antd": "^3.26.7",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
-    "braft-editor": "^2.3.9",
-    "braft-extensions": "^0.1.0",
-    "braft-utils": "^3.0.12",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.19",
     "echarts": "^4.6.0",
