--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^6.2.0",
     "ali-oss": "^6.5.1",
     "bcrypt": "^3.0.7",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
     "compression": "^1.7.4",
     "dayjs": "^1.8.19",
