--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,14 +10,12 @@
     "pm2": "pm2 start npm --name client -- start"
   },
   "dependencies": {
+    "@toast-ui/react-editor": "^2.1.0",
     "antd": "^3.26.7",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
-    "braft-editor": "^2.3.9",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.19",
-    "echarts": "^4.6.0",
-    "echarts-for-react": "^2.0.15-beta.1",
     "highlight.js": "^9.18.1",
     "mime-types": "^2.1.26",
     "next": "9.2.1",
